trakt watchlist incorrectly capitalized

--- a/templates/flexget_vars.yml.j2
+++ b/templates/flexget_vars.yml.j2
@@ -19,7 +19,7 @@ trakt:
         quality: 1080p h264+
   movie:
     quality: 2160p h265+ dtshd+
-    list: Watchlist
+    list: watchlist
 
 path:
   series: '{{ content_path }}/media/TV/{% raw %}{{ series_name }}/Season {{ series_season }}{% endraw %}/'
