fix series sdr quality target

--- a/templates/flexget_vars.yml.j2
+++ b/templates/flexget_vars.yml.j2
@@ -16,7 +16,7 @@ trakt:
         propers: 24 hours
         timeframe: 48 hours
         target: 1080p+ h265
-        quality: 1080p h264+
+        quality: 1080p+ h264+
   movie:
     quality: 2160p h265 hdr+ dtshd+
     list: watchlist
