move movie category to vars

--- a/templates/flexget_vars.yml.j2
+++ b/templates/flexget_vars.yml.j2
@@ -1,6 +1,7 @@
 irc:
   nickname: {{ flexget_nickname }}
   rsskey: {{ flexget_rsskey }}
+  movie_category: "{{ flexget_movie_category }}"
 
 trakt:
   account: {{ trakt_account }}
