add support for specific episode start

--- a/templates/flexget_api.sh.j2
+++ b/templates/flexget_api.sh.j2
@@ -1,2 +1,2 @@
 #!/bin/bash
-curl -X POST http://localhost:5050/api/tasks/execute -H 'Authorization: Token {{ flexget_api_token }}' -H 'Content-Type: application/json' -d '{"tasks": ["decompress series", "decompress movie", "copy series", "copy movie"]}'
+curl -X POST http://localhost:5050/api/tasks/execute -H 'Authorization: Token {{ flexget_api_token }}' -H 'Content-Type: application/json' -d '{"tasks": ["decompress series", "decompress movie", "copy series", "copy movie", "new SDR series", "new HDR series"]}'
